; ModuleID = '/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_do_nullify_user_rating.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_do_nullify_user_rating.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_hints_nullify_user_rating = type { i32 }

@LEV_HINTS_NULLIFY_USER_RATING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_nullify_user_rating(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.lev_hints_nullify_user_rating*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @LEV_HINTS_NULLIFY_USER_RATING, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.lev_hints_nullify_user_rating* @alloc_log_event(i32 %4, i32 4, i32 %5)
  store %struct.lev_hints_nullify_user_rating* %6, %struct.lev_hints_nullify_user_rating** %3, align 8
  %7 = load i32, i32* %2, align 4
  %8 = load %struct.lev_hints_nullify_user_rating*, %struct.lev_hints_nullify_user_rating** %3, align 8
  %9 = getelementptr inbounds %struct.lev_hints_nullify_user_rating, %struct.lev_hints_nullify_user_rating* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load %struct.lev_hints_nullify_user_rating*, %struct.lev_hints_nullify_user_rating** %3, align 8
  %11 = call i32 @nullify_user_rating(%struct.lev_hints_nullify_user_rating* %10)
  ret i32 %11
}

declare dso_local %struct.lev_hints_nullify_user_rating* @alloc_log_event(i32, i32, i32) #1

declare dso_local i32 @nullify_user_rating(%struct.lev_hints_nullify_user_rating*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
